--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -19,7 +19,7 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .cartItemDetail {
@@ -63,12 +63,21 @@
 }
 
 .products {
-  width: 30%;
   margin: 10px;
 }
 
 .summary {
   width: 30%;
+}
+
+.card {
+  width: 200px; /* Fixed width */
+  height: 520px; /* Fixed height */
+}
+
+.card-img-top {
+  width: 100%;
+  height: 50%; /* Example height for image, adjust as needed */
 }
 
 /* Media Queries */
